// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Rendering renders the happy path 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-0"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-0"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> Rendering renders when there is html content in the trigger button 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-1"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-1"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> Rendering renders with custom menu content 1`] = `
<div
  className="dropdown"
>
  Custom Content
</div>
`;

exports[`<Dropdown /> renders menu items as elements 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-20"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-20"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="http://www.google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="http://www.duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="http://www.yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> renders the basic usage 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-19"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-19"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> renders with icon element 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-21"
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden={true}
      className="fa fa-user px-3"
      id="Icon1"
    />
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-21"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;
